fixed image positioning on smaller screen projects page

--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -8,5 +8,5 @@
 
 .content {
     color: white;
-    font-family: 'proxima-nova';
+    font-family: 'proxima nova';
 }
