--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -24,6 +24,7 @@
     width: 50vw;
     font-size: 1.2em;
     line-height: 2em;
+    font-family: 'proxima nova lighter';
 }
 
 .description-header {
